# switcher_control_panel

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  ascll_convert_16_demo.cpp  config.json  config2.json  config3.json  data.txt  ignore  oled_1u.txt  test_1u.cpp  test_2u.cpp
src/: CMakeLists.txt  command.txt  main.cpp  main_demo.cpp  main_http.cpp  rtp_st2110.cpp  rtp_st2110.h  sdl_consumer.cpp  sdl_consumer.h  server.cpp  server.h  switcher.cpp  switcher.h  uart_can_all.cpp  uart_can_all.h  video_play.cpp  video_play.h
src/apps/: CMakeLists.txt
src/apps/decklink_test/: CMakeLists.txt  Capture.cpp  Capture.h  Config.h
src/apps/ip2sdi/: CMakeLists.txt  channel bk.cpp  channel bk.h  channel.cpp  channel.h  ip2sdi_config.xml  main.cpp  server.cpp  server.h
src/apps/ipg/: CMakeLists.txt  Makefile  app_base.cpp  app_base.h  app_build_config.h.in  app_error_code.cpp  app_error_code.h  app_platform.h  app_session.cpp  app_session.h  app_stat.cpp  app_stat.h  args.cpp  args.h  fmt.cpp  fmt.h  http_parse_json.cpp  http_parse_json.h  http_server.cpp  http_server.h  httplib.h  log.h  main.cpp  main_bk.cppbk  node.cpp  node.h  node_implementation.cpp  node_implementation.h  parse_json.cpp  parse_json.h  player.cpp  player.h  rx_audio.cpp  rx_audio.h  rx_video.cpp  rx_video.h  st_config_utils.cpp  st_config_utils.h  test.cpp  test.h  (+6 more)
src/apps/ipg-monitor/: CMakeLists.txt  active-dpdk.service.in  ipg-monitor.service.in  main.cpp
src/apps/ipg/log/: log.txt
src/apps/sdi2ip/: CMakeLists.txt  channel.cpp  channel.h  channel_bk.cpp  channel_bk.h  config.h  main.cpp  sdi2ip_config.xml  server.cpp  server.h  test.h
src/apps/sdi2ip/log/: log.txt
src/apps/sdi2st2110/: CMakeLists.txt  channel.cpp  channel.h  config.h  config.xml  main.cpp  server.cpp  server.h
src/apps/sdi2st2110/log/: log.txt
src/commumication/: ascll_convert_16_demo.cpp  ascll_convert_16_demo.h  can_receive.cpp  can_receive.h  config.h  http_client.cpp  http_client.h  http_server.cpp  http_server.h  uart_send.cpp  uart_send.h  websocket_client.cpp  websocket_client.h
src/datas/: data.txt  data1.txt
src/delay/: CMakeLists.txt  main.cpp
src/delay/media/: ffmpeg_util.cpp  ffmpeg_util.h
src/delay/server/: app_ctx.cpp  app_ctx.h  command_line_service.h  config_servce.h  config_service.cpp  config_service.h  config_util.cpp  config_util.h  delay_control_service.cpp  delay_control_service.h  delay_http_service.cpp  delay_http_service.h  http_service.cpp  http_service.h  service.cpp  service.h  service_manager.cpp  service_manager.h  slice_manager.cpp  slice_manager.h  slice_service.cpp  slice_service.h  stat_service.cpp  stat_service.h
src/delay/st2110/: st2110_config.h  st2110_dummy.cpp  st2110_dummy.h  st2110_output.h  st2110_service.cpp  st2110_service.h  st2110_session.cpp  st2110_session.h  st2110_source.h
src/delay/util/: fs.cpp  fs.h  io.cpp  io.h  json_util.h  os_util.cpp  os_util.h  program_var.cpp  program_var.h  stat_recorder.h  uri.cpp  uri.h
src/libs/: CMakeLists.txt
src/libs/core/: CMakeLists.txt
src/libs/core/include/: frame.h  video_format.h
src/libs/core/include/core/: video_format.h
src/libs/core/include/executor/: executor.h
src/libs/core/include/frame/: frame.h  frame_bk.h
src/libs/core/include/stream/: input.h  output.h
src/libs/core/include/util/: color_conversion.h  date.h  logger.h  png_writer.h  timer.h
src/libs/core/src/: video_format.cpp
src/libs/core/src/executor/: executor.cpp
src/libs/core/src/frame/: frame.cpp  frame_bk.cpp
src/libs/core/src/stream/: input.cpp  output.cpp
src/libs/core/src/util/: buffer.cpp  color_conversion.cpp  fs.cpp  lodepng.cpp  logger.cpp  png_writer.cpp  thread.cpp  uuid.cpp
src/libs/decklink/: CMakeLists.txt
src/libs/decklink/include/: util.h
src/libs/decklink/include/consumer/: decklink_consumer.h
src/libs/decklink/include/decklink/: manager.h  util.h
src/libs/decklink/include/input/: decklink_input.h
src/libs/decklink/include/output/: decklink_output.h
src/libs/decklink/include/producer/: decklink_producer.h
src/libs/decklink/src/: manager.cpp  util.cpp
src/libs/decklink/src/consumer/: decklink_consumer.cpp
src/libs/decklink/src/input/: decklink_input.cpp
src/libs/decklink/src/output/: decklink_output.cpp
src/libs/decklink/src/producer/: decklink_producer.cpp
src/libs/ffmpeg/: CMakeLists.txt
src/libs/ffmpeg/include/input/: ffmpeg_input.h
src/libs/ffmpeg/include/producer/: ffmpeg_producer.h
src/libs/ffmpeg/src/input/: ffmpeg_input.cpp
src/libs/ffmpeg/src/producer/: ffmpeg_producer.cpp
src/libs/net/: CMakeLists.txt
src/libs/net/include/: udp_client.h  udp_receiver.h  udp_sender.h
src/libs/net/include/net/: async_sender.h  udp_sender.h
src/libs/net/src/: async_sender.cpp  udp_client.cpp  udp_receiver.cpp  upd_client.cpp  upd_client2.cpp  upd_receiver.cpp  upd_sender.cpp
src/libs/rtp/: CMakeLists.txt
src/libs/rtp/include/: header.h  packet.h  packets_buffer.h  rtp_context.h  util.h
src/libs/rtp/include/consumer/: rtp_st2110_consumer.h
src/libs/rtp/include/input/: rtp_st2110_input.h
src/libs/rtp/include/output/: rtp_st2110_output.h  rtp_st2110_output2.h  rtp_st2110_output_bk.h
src/libs/rtp/include/producer/: rtp_st2110_producer.h
src/libs/rtp/include/rtp/: packet.h  packets_buffer.h  rtp_constant.h  rtp_context.h
src/libs/rtp/src/: packet.cpp  packets_buffer.cpp  util.cpp
src/libs/rtp/src/consumer/: rtp_st2110_consumer.cpp
src/libs/rtp/src/input/: rtp_st2110_input.cpp
src/libs/rtp/src/output/: rtp_st2110_output.cpp  rtp_st2110_output2.cpp  rtp_st2110_output_bk.cpp  rtp_st2110_output_bk2.cpp
src/libs/rtp/src/producer/: rtp_st2110_producer.cpp
src/libs/sdl/: CMakeLists.txt
src/libs/st2110/: CMakeLists.txt
src/libs/st2110/src/: test.cpp
src/libs/util/: CMakeLists-bk.txt  CMakeLists.txt
src/libs/util/include/: buffer.h  color_conversion.h  date.h  frame.h  logger.h  timer.h  video_format.h
src/libs/util/src/: buffer.cpp  color_conversion.cpp  logger.cpp  video_format.cpp
src/log/: log.txt
src/logs/: log.txt
src/util/: os.cpp  os.h
(+120 files in other folders)
